# Artinx-2023-Rune

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: Binarizer.hpp  DetectResult.hpp  Detector.hpp  config.hpp  utils.hpp
src/: Binarizer.cpp  CMakeLists.txt  Detector.cpp  main.cpp
